chat window icon element overlap — fixed

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -6334,9 +6334,9 @@ ul.renote-color-btn > li {
 
 /*typeing */
 .type-wrp {
-    width: 55px;
+    width: 54px;
     height: 25px;
-    margin-left: 11px;
+    margin-left: 5px;
     overflow: hidden;
     position: relative;
     display: inline-block;
